--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,13 @@
 
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.content}}</li>
+        <div class="tweetbox">
+          <img>
+          <div class = "content">
+            <p class="by"><a href="/users/{{tweet.name}}">{{tweet.name}}</a></p>
+            <p>{{tweet.content}}</p>
+          </div>
+        </div>
       {% endfor %}
 
     </div>
